--- a/resources.qrc
+++ b/resources.qrc
@@ -1,9 +1,14 @@
 <!DOCTYPE RCC>
 <RCC version="1.0">
     <qresource prefix="/">
-        <file>shaders/basic.vert</file>
-        <file>shaders/basic.frag</file>
-        <file>assets/texture.jpg</file>
+	<file>shaders/base.frag</file>
+	<file>shaders/base.vert</file>
+	<file>shaders/lighting.frag</file>
+	<file>shaders/lighting.vert</file>
+	<file>shaders/postprocess.frag</file>
+	<file>shaders/postprocess.vert</file>
+	<file>shaders/zpass.frag</file>
+	<file>shaders/zpass.vert</file>
     </qresource>
 </RCC>
 
